# snowdiff-cli

./: Pipfile  README.md  pyproject.toml
snow_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
snowdiff/: __main__.py
snowdiff/utils/: expected_profile.py
snowdiff_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: __init__.py  __main__.py
src/utils/: expected_profile.py  snowflake_connector.py
tests/: main_test.py
tests/utils/: expected_profile_test.py  snowflake_connector_test.py
